--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "maaz",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "esm": "^3.2.25",
